Turn off quick suggestions for instructions

--- a/client/preview/public/index.html
+++ b/client/preview/public/index.html
@@ -54,7 +54,7 @@
     }
   };
 
-  window.process = { env: { NODE_ENV: 'production' } }
+  window.process = { env: { NODE_ENV: 'development' } }
 
   const exported = {}
 
