--- a/client/preview/public/index.html
+++ b/client/preview/public/index.html
@@ -16,10 +16,23 @@
 
   // hijack console log
   (function () {
-    var oldLog = console.log;
+    let oldlog = console.log;
+    let oldinfo = console.info;
+    let oldwarn = console.warn;
     console.log = function (message) {
-      alert(JSON.stringify(message))
-      oldLog.apply(console, arguments);
+      let msg = typeof message === 'string' ? messsage : JSON.stringify(message)
+      window.parent.postMessage({ result: msg, from: 'preview' }, '*')
+      oldlog.apply(console, arguments);
+    };
+    console.info = function (message) {
+      let msg = typeof message === 'string' ? messsage : JSON.stringify(message)
+      window.parent.postMessage({ result: msg, from: 'preview' }, '*')
+      oldinfo.apply(console, arguments);
+    };
+    console.warn = function (message) {
+      let msg = typeof message === 'string' ? messsage : JSON.stringify(message)
+      window.parent.postMessage({ result: msg, from: 'preview' }, '*')
+      oldwarn.apply(console, arguments);
     };
   })();
 
