--- a/client/styles/fonts/icomoon/demo.html
+++ b/client/styles/fonts/icomoon/demo.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="style.css"></head>
 <body>
     <div class="bgc1 clearfix">
-        <h1 class="mhmm mvm"><span class="fgc1">Font Name:</span> icomoon <small class="fgc1">(Glyphs:&nbsp;287)</small></h1>
+        <h1 class="mhmm mvm"><span class="fgc1">Font Name:</span> icomoon <small class="fgc1">(Glyphs:&nbsp;288)</small></h1>
     </div>
     <div class="clearfix mhl ptl">
         <h1 class="mvm mtn fgc1">Grid Size: Unknown</h1>
@@ -4020,6 +4020,20 @@
     </div>
     <div class="clearfix mhl ptl">
         <h1 class="mvm mtn fgc1">Grid Size: 16</h1>
+        <div class="glyph fs2">
+            <div class="clearfix bshadow0 pbs">
+                <span class="icon-file-empty"></span>
+                <span class="mls"> icon-file-empty</span>
+            </div>
+            <fieldset class="fs0 size1of1 clearfix hidden-false">
+                <input type="text" readonly value="ea1e" class="unit size1of2" />
+                <input type="text" maxlength="1" readonly value="&#xea1e;" class="unitRight size1of2 talign-right" />
+            </fieldset>
+            <div class="fs0 bshadow0 clearfix hidden-true">
+                <span class="unit pvs fgc1">liga: </span>
+                <input type="text" readonly value="file-empty, file3" class="liga unitRight" />
+            </div>
+        </div>
         <div class="glyph fs2">
             <div class="clearfix bshadow0 pbs">
                 <span class="icon-terminal"></span>
